[gd_scene load_steps=6 format=3 uid="uid://dfca33foh27q8"]

[ext_resource type="Script" uid="uid://bylt58y3m00qt" path="res://scripts/audio_manager.gd" id="1_aoitu"]
[ext_resource type="Texture2D" uid="uid://bumkhca36v0p0" path="res://icons/mic.png" id="1_mhnvy"]
[ext_resource type="Texture2D" uid="uid://c7hof84g7sgn2" path="res://icons/record.png" id="2_m6ggh"]
[ext_resource type="Texture2D" uid="uid://cephd2gucet7x" path="res://icons/delete.png" id="3_aoitu"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_m6ggh"]

[node name="AudioManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoitu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.672024, 0.638565, 0.523767, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TopMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TopHBox" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "Audio Manager"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
texture = ExtResource("1_mhnvy")

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="CenterHBox" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin"]
layout_mode = 2
alignment = 1

[node name="ButtonsMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="ButtonsVBox" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin"]
layout_mode = 2
alignment = 1

[node name="RecordButtonMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin/ButtonsVBox"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="RecordButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin/ButtonsVBox/RecordButtonMargin"]
layout_mode = 2
icon = ExtResource("2_m6ggh")
icon_alignment = 1

[node name="DeleteButtonMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin/ButtonsVBox"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="DeleteButtonMargin" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin/ButtonsVBox/DeleteButtonMargin"]
layout_mode = 2
icon = ExtResource("3_aoitu")
icon_alignment = 1

[node name="ScrollBox" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ScrollVBox" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label4" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label5" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label6" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label7" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Label8" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ScrollBox/ScrollContainer/ScrollVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "peup"

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnButtonMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="ReturnButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/ReturnButtonMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "return to menu"
icon_alignment = 1

[node name="RecordingPlaybackAudioStream" type="AudioStreamPlayer" parent="."]

[node name="RecordingAudioStream" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_m6ggh")
bus = &"Record"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/CenterMargin/CenterHBox/ButtonsMargin/ButtonsVBox/RecordButtonMargin/RecordButton" to="." method="_on_record_button_pressed"]
